--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,8 @@
     "$components/": "./components/",
     "$sdk/": "./sdk/",
     "$islands/": "./islands/",
-    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.66.10/",
-    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.40.1/",
+    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.67.1/",
+    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.41.0/",
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "preact": "https://esm.sh/preact@10.19.6",
     "preact/": "https://esm.sh/preact@10.19.6/",
@@ -19,7 +19,7 @@
     "react": "https://esm.sh/preact@10.19.2/compat"
   },
   "tasks": {
-    "start": "deno task bundle && deno run --unstable -A --env --unstable --config=deno.json $(deno eval 'console.log(import.meta.resolve(\"deco/hypervisor/main.ts\"))') --build-cmd 'deno task build' -- deno task dev",
+    "start": "deno task bundle && deno run -A --env --unstable --config=deno.json $(deno eval 'console.log(import.meta.resolve(\"deco/hypervisor/main.ts\"))') --build-cmd 'deno task build' -- deno task dev",
     "gen": "deno run -A dev.ts --gen-only",
     "play": "USE_LOCAL_STORAGE_ONLY=true deno task start",
     "component": "deno eval 'import \"deco/scripts/component.ts\"'",
