--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,8 @@
     "$components/": "./components/",
     "$sdk/": "./sdk/",
     "$islands/": "./islands/",
-    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.67.1/",
-    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.41.0/",
+    "deco/": "https://denopkg.com/deco-cx/deco@1.61.5/",
+    "apps/": "https://denopkg.com/deco-cx/apps@0.36.14/",
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "preact": "https://esm.sh/preact@10.19.6",
     "preact/": "https://esm.sh/preact@10.19.6/",
