--- a/deno.json
+++ b/deno.json
@@ -53,7 +53,7 @@
       ]
     }
   },
-  "nodeModulesDir": true,
+  "nodeModulesDir": false,
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
